# FastChat

./: .gitignore  docker-compose.yml  pyproject.toml
src/: .env.template  Dockerfile  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_03_02_1540-06e6dc0273d8_create_user_table.py  2025_03_20_1058-e426c0686261_create_models.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth_router.py  chat_router.py  websocket_router.py
src/auth/: utils.py
src/core/: config.py  dependencies.py  lifecycle.py  middleware.py
src/core/auth/: dependencies.py  exceptions.py  forms.py
src/core/auth/services/: auth_service.py  redis_service.py  token_service.py
src/core/auth/utils/: cookies_utils.py  password_utils.py  token_utils.py
src/core/auth/validation/: auth_validation.py
src/core/chat/services/: chat_service.py  message_service.py  redis_service.py
src/core/models/: __init__.py  attachment_model.py  base.py  chat_model.py  chat_part_model.py  db_helper.py  message_model.py  user_model.py
src/core/models/mixins/: __init__.py
src/core/redis/: connection.py  errors.py  keys.py  pubsub_manager.py  serialization.py
src/core/schemas/: chat_schemas.py  redis_schemas.py  types.py  user.py  user_schemas.py  ws_schemas.py
src/core/websockets/: connection_manager.py  dependencies.py
src/repositories/: chat_repo.py  user_repo.py
src/routers/: docs.py
src/tests/: conftest.py  test_auth.py
src/tests/factories/: base.py  chat_factory.py  user_factory.py
src/tests/fixtures/: auth.py  chat.py  client.py  db.py  redis.py  redis_pubsub.py  websockets.py
(+23 files in other folders)
