[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = { extras = ["email"], version = "^2.10.6" }
pydantic-settings = "^2.7.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.38" }
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pyjwt = { extras = ["crypto"], version = "^2.10.1" }
bcrypt = "^4.2.1"
orjson = "^3.10.15"
redis = "^5.2.1"
setuptools = "^75.8.2"
ruff = "^0.9.9"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
fakeredis = "^2.27.0"
factory-boy = "^3.3.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.ruff]
line-length = 88

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    "__pycache__",
    "src/alembic/versions"
]

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ANN", "G004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/tests/**/*.py" = ["ANN"]
"src/tests/conftest.py" = ["F403"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"